权限管理模块完成

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,7 +5,10 @@
 
 #app,html, body{
     height: 100%;
+    min-width: 1366px;
 }
+
+
 
 .icon-weibiaoti562,icon-tianchongxing-{
     font-size: 20px;
